--- a/app/public/assets/styles/css/taskboard.css
+++ b/app/public/assets/styles/css/taskboard.css
@@ -14,14 +14,14 @@
 
 /* === Main CSS === */
 html.background {
-  background-image: url("../../images/background.jpg");
+  background-image: url("../../images/desktopbackground.jpg");
   background-attachment: fixed;
   background-size: cover;
 }
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   html.background {
-    background-image: url("../../images/background2x.jpg");
+    background-image: url("../../images/desktopbackground2x.jpg");
   }
 }
 body {
@@ -180,6 +180,12 @@ header .username p {
 }
 
 @media only screen and (max-width: 35em) {
+  html.background {
+    background-image: url("../../images/mobilebackground.jpg");
+    background-attachment: fixed;
+    background-size: cover;
+  }
+
   header {
     font-size: 0.8em;
     padding: 2.5% 0;
@@ -198,6 +204,11 @@ header .username p {
     border-left-width: 4px;
     border-right-width: 4px;
     border-top-width: 4px;
+  }
+}
+@media only screen and (max-width: 35em) and (-webkit-min-device-pixel-ratio: 2), only screen and (max-width: 35em) and (min-resolution: 192dpi) {
+  html.background {
+    background-image: url("../../images/mobilebackground2x.jpg");
   }
 }
 @media only screen and (max-width: 20em) {
